<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Report"
    android:orientation="vertical"
    android:background="@color/black"

    >

        <TextView
            android:id="@+id/report_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/report_settings"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/input_size"
            android:layout_marginTop="@dimen/login_margin_top"
            />



    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/login_margin_top"
        >

        <Button
        android:id="@+id/start_date_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/set_start_date_report"/>


        <TextView
            android:id="@+id/start_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_start_date"
            android:layout_marginLeft="@dimen/login_margin_left"
        />


    </android.support.v7.widget.LinearLayoutCompat>



    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/login_margin_top"
        >

        <Button
            android:id="@+id/end_date_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/set_end_date_report"/>


        <TextView
            android:id="@+id/end_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_end_date"
            android:layout_marginLeft="@dimen/login_margin_left"
            />


    </android.support.v7.widget.LinearLayoutCompat>


        <Button
            android:id="@+id/start_report_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_report"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/login_margin_top"

            />



</android.support.v7.widget.LinearLayoutCompat>