<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Result"
    android:background="@color/black"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >


        <!--LOGO-->
        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo"
            android:textSize="@dimen/logo_size"
            android:textColor="@android:color/white"
            android:fontFamily="serif"
            />



        <include layout="@layout/content_result" />



        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/login_margin_top"
            >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textSize="@dimen/fab_margin"
                android:textStyle="bold|italic"
                android:text="@string/tot_views"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/total_views"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_margin_left"
                />


        </android.support.v7.widget.LinearLayoutCompat>



        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/login_margin_top"
            >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textSize="@dimen/fab_margin"
                android:textStyle="bold|italic"
                android:text="@string/transactions"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/transactions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_margin_left"
                />


        </android.support.v7.widget.LinearLayoutCompat>



        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/login_margin_top"
            >


            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textSize="@dimen/fab_margin"
                android:textStyle="bold|italic"
                android:text="@string/scr"
                android:textAlignment="center"
                />


            <TextView
                android:id="@+id/scr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_margin_left"
                />


        </android.support.v7.widget.LinearLayoutCompat>

    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>
